[package]
name = "fuse"
edition = "2018"
version = "0.4.0-dev"
authors = ["Andreas Neuhaus <zargony@zargony.com>"]
description = "Rust library for filesystems in userspace (FUSE)"
documentation = "https://docs.rs/fuse"
homepage = "https://github.com/zargony/rust-fuse"
repository = "https://github.com/zargony/rust-fuse"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["api-bindings", "filesystem"]
license = "MIT"

[workspace]
members = [".", "fuse-abi", "fuse-sys", "fuse-sys-android"]

[badges]
travis-ci = { repository = "zargony/rust-fuse" }

[dependencies]
fuse-abi = { path = "./fuse-abi", version = "=0.4.0-dev" }
libc = "0.2.51"
log = "0.4.6"
thread-scoped = "1.0.2"
mio = "0.6.19"
serde_derive = "1.0"
serde = "1.0"

[target.'cfg(not(target_os="android"))'.dependencies]
fuse-sys = { path = "./fuse-sys", version = "=0.4.0-dev" }

[target.'cfg(target_os="android")'.dependencies]
fuse-sys-android = { path = "./fuse-sys-android", version = "=0.0.1-dev" }


[dev-dependencies]
env_logger = "0.6.0"
